--- a/open.html
+++ b/open.html
@@ -229,34 +229,46 @@
 
         <div class="main-container container">
             <div class="row">
-                <h1>
-                    Счет-фактура
-                </h1>
-                <div>
-                    Лицевой счет: 554488
+                <h1>Ваши номера</h1>
+                <ul class="numbers_list" style="padding-left: 35px;">
+                    <li class="number">В888ВХ116 - Моя</li>
+                    <li class="number">В116ТМ116 - Рабочая</li>
+                </ul>
+                <div style="margin-top: 30px" class="card-title">
+                    <h4 class="mb-0" style="font-size: 18px;">+ Добавить новый номер машины</h4>
                 </div>
-                <div>
-                    Адрес: г. Казань
+                <div class="card-body add-number">
+                    <hr>
+                    <div class="form-row">
+                        <div class="col-md-9 mb-3">
+                            <label for="validationC">Номер машины</label>
+                            <table id="validationC" style="padding:20px;">
+                                <tr>
+                                    <td class="number_left">
+                                        <input id="number_left" name="number_left" placeholder="А000АА" required="" />
+                                    </td>
+                                    <td class="number_right">
+                                        <input type="number" id="number_right" name="number_right" placeholder="777"
+                                            autocomplete="off" max="999" maxlength="3" required="" />
+                                        <div class="rus">&nbsp;</div>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                    <button type="button" class="add_num_button">
+                        <span class="button__text">Добавить номер</span>
+                        <span class="button__icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" viewBox="0 0 24 24" stroke-width="2"
+                                stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" height="24" fill="none" class="svg">
+                                <line y2="19" y1="5" x2="12" x1="12"></line>
+                                <line y2="12" y1="12" x2="19" x1="5"></line>
+                            </svg></span>
+                    </button>
                 </div>
-                <div class="pay_date">
-                    <div>За ноябрь 2023</div>
-                    <div>К оплате: 2500 ₽</div>
-                </div>
-                <button class="btn btn-default btn-lg mb-3 px-4 shadow-sm buttons">
-                    <i class="bi bi-download"></i> Скачать счет
+
+                <button class="btn btn-default btn-lg mb-3 px-4 shadow-sm buttons" id="open_button" style="margin-top: 60px;">
+                    Открыть шлагбаум
                 </button>
-
-
-                <button class="btn btn-default btn-lg mb-3 px-4 shadow-sm buttons" id="pay_button">
-                    <i class="bi bi-credit-card-2-back"></i> Оплатить
-                </button>
-            </div>
-
-
-
-        </div>
-
-
 
     </main>
     <!-- Page ends-->
@@ -379,6 +391,75 @@
 
     <!-- page level custom script -->
     <script src="assets/js/app.js"></script>
+    <script>
+        document.querySelector(".card-title").addEventListener("click", () => {
+            document.querySelector('.add-number').classList.toggle("add-number-show")
+        })
+
+
+        $("#number_left").on('input', function () {
+            var txt = $("#number_left").val();
+            txt = txt.split(' ').join('');
+            $("#number_left").val(txt);
+            if (txt.length < 1) {
+                 $(".number_left").css("background-color", "#f5f5f5");
+                $(".number_right").css("background-color", "#f5f5f5");
+                $("#number_left").css("color", "#000");
+                $("#number_right").css("color", "#000")
+            }
+
+            if (txt.length > 1 && txt[0].match(/[а-яА-Я]/i) && txt[1].match(/[а-яА-Я]/i)) {
+                $(".number_left").css("background-color", "#dfd400");
+                $(".number_right").css("background-color", "#dfd400");
+                $("#number_left").css("color", "#000");
+                $("#number_right").css("color", "#000")
+
+                txt = txt.slice(0, 5);
+                $("#number_left").val(txt);
+                if (txt.length == 5) $("#number_right").focus();
+            }
+            else if (txt.length > 4 && txt[0].match(/[а-яА-Я]/i) && txt[4].match(/[0-9]/i)) {
+                $(".number_left").css("background-color", "#2174e2");
+                $(".number_right").css("background-color", "#2174e2");
+                $("#number_left").css("color", "#000");
+                $("#number_right").css("color", "#000");
+                txt = txt.slice(0, 5);
+                $("#number_left").val(txt);
+                if (txt.length == 5) $("#number_right").focus();
+            }
+
+            else if (txt.length > 1 && txt[1].match(/[0-9]/i) && txt[0].match(/[а-яА-Я]/i)) {
+                $(".number_left").css("background-color", "#f5f5f5");
+                $(".number_right").css("background-color", "#f5f5f5");
+                $("#number_left").css("color", "#000");
+                $("#number_right").css("color", "#000")
+                txt = txt.slice(0, 6);
+                $("#number_left").val(txt);
+                if (txt.length == 6) $("#number_right").focus();
+
+            }
+
+            if (txt.length == 1 && txt.match(/[0-9]/i)) {
+                $(".number_left").css("background-color", "#000");
+                $(".number_right").css("background-color", "#000");
+                $("#number_left").css("color", "#fff");
+                $("#number_right").css("color", "#fff");
+
+            }
+
+            else if (txt.length > 1 && txt[0].match(/[0-9]/i)) {
+                txt = txt.slice(0, 6);
+                $("#number_left").val(txt);
+                if (txt.length == 6) $("#number_right").focus();
+            }
+
+        });
+        $("#number_right").on('input', function () {
+            var txt2 = $("#number_right").val();
+            txt2 = txt2.slice(0, 3);
+            $("#number_right").val(txt2);
+        })
+    </script>
 
 </body>
 
